<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragmentChooser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_middle_margin"
        android:layout_marginEnd="@dimen/default_middle_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_chooser_btn_coconut"
            style="@style/AppButton"
            android:text="@string/cat_name_coconut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_chooser_btn_morty"
            style="@style/AppButton"
            android:text="@string/cat_name_morty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_chooser_btn_woody"
            style="@style/AppButton"
            android:text="@string/cat_name_woody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_chooser_btn_cake"
            style="@style/AppButton"
            android:text="@string/cat_name_cake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_chooser_btn_marcus"
            style="@style/AppButton"
            android:text="@string/cat_name_marcus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>