<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />
    
    <FrameLayout
        android:id="@+id/activity_fourth_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/activity_fourth_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/activity_fourth_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_fourth_fragment_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_fourth_btn_add"
        style="@style/AppButton"
        android:layout_margin="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_fourth_btn_replace"
        style="@style/AppButton"
        android:layout_margin="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_replace_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_fourth_btn_remove"
        style="@style/AppButton"
        android:layout_margin="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_remove_title" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>