<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_new_cat_text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_middle_margin"
            android:text="@string/adding_new_cat_title"
            android:textSize="@dimen/default_text_size_title"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_text_input_name"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_cat_name_hint"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_middle_margin"
            android:layout_marginEnd="@dimen/default_middle_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/activity_new_cat_text_view_title"
            app:layout_constraintBottom_toTopOf="@id/layout_text_input_breed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_new_cat_layout_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_text_input_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_cat_breed_hint"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_middle_margin"
            android:layout_marginEnd="@dimen/default_middle_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/layout_text_input_name"
            app:layout_constraintBottom_toTopOf="@id/layout_text_input_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_new_cat_layout_input_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_text_input_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_cat_color_hint"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_middle_margin"
            android:layout_marginEnd="@dimen/default_middle_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/layout_text_input_breed"
            app:layout_constraintBottom_toTopOf="@id/layout_text_input_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_new_cat_layout_input_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_text_input_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_cat_gender_hint"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_middle_margin"
            android:layout_marginEnd="@dimen/default_middle_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/layout_text_input_color"
            app:layout_constraintBottom_toTopOf="@id/layout_text_input_age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_new_cat_layout_input_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_text_input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_cat_age_hint"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_middle_margin"
            android:layout_marginEnd="@dimen/default_middle_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/layout_text_input_gender"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_new_cat_layout_input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_new_cat_btn_add"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_cat_btn_add"
            android:layout_margin="@dimen/default_middle_margin"
            app:layout_constraintTop_toBottomOf="@id/layout_text_input_age"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>